[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bluesky_autonomic"
dist-name = "bluesky-autonomic"
author = "Kyle Sunden"
author-email = "git@ksunden.space"
home-page = "https://github.com/wright-group/bluesky-autonomic"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["attune"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/wright-group/bluesky-autonomic"
Issues = "https://github.com/wright-group/bluesky-autonomic/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
